# volk

./: .gitignore  CMakeLists.txt  Volk.sln  compile  compile_only  configure  debug  go  make  notes.md  run
Volk/: App.cs  Program.cs  RuntimeConfig.cs  Volk.csproj
Volk/CodeGeneration/: CodeGenerator.cs  IRVariable.cs
Volk/Core/: BuiltinTypes.cs  CodeGenerator.cs  Expression.cs  FunctionGroup.cs  IRVariable.cs  Keyword.cs  Lexer.cs  OperatorTokenType.cs  ParseException.cs  Parser.cs  Scope.cs  SourcePosition.cs  SystemNative.cs  Token.cs  TokenType.cs  VKObject.cs  VKType.cs  ValueTokenType.cs
Volk/Docs/: Memory.md
Volk/Lexing/: DummyToken.cs  Keyword.cs  Lexer.cs  OperatorTokenType.cs  SourcePosition.cs  Token.cs  TokenType.cs
Volk/Parsing/: Expression.cs  ExpressionType.cs  Parser.cs  Scope.cs  ShuntingYard.cs  ValueExpressionType.cs
Volk/Std/: StdString.cs
Volk/debug_scripts/: build.sh  compile.sh  run.sh
Volk/samples/: strtest.vk  test copy 2.vk  test copy.vk  test.vk
include/: spdlogConfigTargets.cmake
scripts/: sample.bc  sample.ll  sample.s  sample.vk
src/: common.h  main.cpp
src/core/: exceptions.h  expression.h  expression_base.h  expression_impl.h  function.h  irvariabledescriptor.h  keyword.h  namespace.h  object.h  operator.h  program.h  scope.h  source.h  sourceposition.h  token.h  type.h  valuecast_rules.h  variable.h
src/help/: expr_types.md
src/llvm/: llvm.cpp  llvm.h
src/log/: log.cpp  log.h
src/parsing/: lexer.cpp  lexer.h  parser.cpp  parser.h  pass_name.cpp  pass_type.cpp
src/util/: color.cpp  color.h  options.cpp  (+3 more)
(+88 files in other folders)
